# Game-of-Life

./: README.md  pyproject.toml
game_of_life/: calculations.py  config.py  drawing.py  game_logic.py  main.py
tests/: unit_tests.py
